# ghost-writer

./: .gitignore  AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
src/: __main__.py  agent.py  blog_clients.py  image_gen.py  models.py  tools.py  tui.py
src/ghost_writer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/static/: index.html
tests/: conftest.py  test_agent.py  test_api.py  test_blog_clients.py  test_image_gen.py  test_tools.py
