[project]
name = "ghost-writer"
version = "0.1.0"
description = "Autonomous AI blog writer with TUI chat interface"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "langchain==0.2.17",
    "langchain-openai==0.1.25",
    "duckduckgo-search==8.1.1",
    "APScheduler==3.11.2",
    "PyJWT==2.11.0",
    "click==8.3.1",
    "textual==8.0.1",
]

[project.scripts]
gw-tui = "tui:run_tui"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
